Menu overflow fixed.
Scroll changed to hidden.

--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,7 @@ body {
     left: 0;
     top: 0;
     background-color: #0a0a0a;
-    overflow: scroll;
+    overflow: hidden;
     transition: 0.6s;
 }
 
